# interview-review-assistant

./: .git-commit-message.txt  .gitignore  README.md  中文commit模板.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: chunks.py  documents.py  questions.py  review.py  router.py  settings.py  system.py
backend/app/core/: config.py  time_utils.py
backend/app/db/: session.py
backend/app/models/: entities.py
backend/app/schemas/: chunk.py  document.py  question.py  review.py  settings.py
backend/app/services/: __init__.py  chunk_service.py  document_service.py  markdown_parser.py  question_generator.py  question_service.py  review_scheduler.py  review_service.py
backend/app/services/chunk_service/: __init__.py  chunk_enrichment_service.py  chunk_generation_service.py  chunk_models.py  chunk_query_service.py  chunk_service.py  chunk_split_service.py
backend/app/services/document_service/: __init__.py  document_query_service.py  document_service.py  document_upload_service.py  markdown_parser_service.py
backend/app/services/llm_service/: __init__.py  llm_gateway_service.py
backend/app/services/question_service/: __init__.py  question_ai_generation_service.py  question_draft_service.py  question_evidence_service.py  (+3 more)
backend/tests/integration/: test_chunks_api.py  test_documents_api.py  test_llm_enhancement_flow.py  test_questions_api.py  test_review_api.py  test_settings_api.py
backend/tests/unit/: test_chunk_service.py  test_llm_gateway_service.py  test_markdown_parser.py  test_question_generator.py  test_review_scheduler.py
(+26 files in other folders)
