[project]
name = "interview-review-assistant-backend"
version = "0.1.0"
description = "Backend service for the interview review assistant"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "sqlmodel>=0.0.22,<1.0.0",
  "mistune>=3.0.2,<4.0.0",
  "python-multipart>=0.0.9,<1.0.0"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
